--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "express": "^4.18.2",
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
-    "nodemon": "^2.0.22",
+    "mongoose": "^5.13.15",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
